Remoção de mocks, métodos e mensagens obsoletos em testes, componentes e serviços para simplificação e melhoria na manutenção do código.